# Element-Games-Engine

./: .gitignore  CMakeLists.txt  README  README.md  config.json  gprof_generator.sh  run_cppcheck.sh
Applications/: CMakeLists.txt
Applications/Editor/: CMakeLists.txt  Editor.cpp  Editor.h  main.cpp
Applications/SpaceSim/: CMakeLists.txt
Applications/SpaceSim/Client/: CMakeLists.txt  SpaceSim.cpp  SpaceSim.h  main.cpp
Applications/SpaceSim/Common/: SpaceSimNetworkActionTypes.h
Applications/SpaceSim/Server/: CMakeLists.txt  SpaceSimServer.cpp  SpaceSimServer.h  main.cpp
Applications/Tests/: CMakeLists.txt
Applications/Tests/Sandbox/: CMakeLists.txt  Sandbox.cpp  main.cpp
Applications/Utilities/: CMakeLists.txt
Applications/Utilities/ModelConverter/: CMakeLists.txt  ModelConverter.cpp  ModelConverter.h  cmake_install.cmake  element_games_model_converter  main.cpp
Assets/GUIs/: invader.tga  model_converter.rcss  model_converter.rml  rkt.rcss  sandbox.rml  test.rml
Assets/GUIs/Base/: index.html  mvc.js  util.js
Assets/GUIs/Editor/: index.html
Assets/GUIs/ModelConverter/: index.html
Assets/GUIs/SpaceSimClient/: index.html
Assets/Models/: test_model.ego  villager_free.dae
Assets/Models/medieval_free_mesh/: 14_lod0.dae  14_lod0.dts  14_lod0.lwo  14_lod0.ms3d  14_lod0.x  Fantasy_Tree1.dts  Fantasy_Tree1.lwo  Fantasy_Tree1.ms3d  Fantasy_Tree1.mtl  Fantasy_Tree1.x  Fantasy_tree1.dae  Leaf_N.tga  Leaf_OP.tga  Leaf_s.tga  Tree_01_N.tga  Tree_N.tga  booth01_LOD01.dae  booth01_LOD01.lwo  booth01_LOD01.ms3d  booth01_LOD01.mtl  booth01_lod01.dts  booth01_lod01.x  con_dirt_01_s.tga  f1_barrel.dae  f1_barrel.dts  f1_barrel.lwo  f1_barrel.ms3d  f1_barrel.mtl  f1_barrel.x  flower_10.bat  flower_10.dae  (+54 more)
Assets/Scenes/: test.egs
Assets/Scripts/: hello_world.lua
Dependencies/Downloads/: glew-1.6.0.tgz
Documents/: GUI.cpp.backup  GUI.h.backup  Remember.txt  Shaders.txt
Engine/: CMakeLists.txt
Engine/Dynamics/: Animation.h  Physics.h
Engine/Dynamics/Source/: Animation.cpp  Physics.cpp
Engine/Game/: Entity.h  Game.h  Object.h  ObjectAttribute.h  ObjectBasicAttribute.h  ObjectControlAttribute.h  ObjectEmissionAttribute.h  ObjectManager.h  ObjectRenderingAttribute.h  ObjectScript.h  Scene.h
Engine/Game/Source/: Entity.cpp  Game.cpp  Object.cpp  ObjectAttribute.cpp  ObjectBasicAttribute.cpp  ObjectControlAttribute.cpp  ObjectEmissionAttribute.cpp  ObjectManager.cpp  ObjectRenderingAttribute.cpp  ObjectScript.cpp  Scene.cpp
Engine/Graphics/: .directory  Camera.h  CameraManager.h  GraphicsSubsystem.h  Light.h  Mesh.h  MeshGenerator.h  MeshManager.h  OffscreenBuffer.h  OpenGLInterface.h  Particle.h  Renderer.h  RendererDeferred.h  RendererMultipass.h  RenderingMaterial.h  Shader.h  ShaderManager.h  Texture.h  TextureManager.h
Engine/Graphics/Source/: Camera.cpp  CameraManager.cpp  GraphicsSubsystem.cpp  Light.cpp  Mesh.cpp  MeshGenerator.cpp  MeshManager.cpp  OffscreenBuffer.cpp  OpenGLInterface.cpp  Particle.cpp  Renderer.cpp  RendererDeferred.cpp  RendererMultipass.cpp  RenderingMaterial.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp  TextureManager.cpp
Engine/Input/: Input.h
Engine/Input/Source/: Input.cpp
Engine/Math/: Math.h  Noise.h  Vector3f.h
Engine/Math/Source/: Math.cpp  Noise.cpp  Vector3f.cpp
Engine/Media/: AssimpInterface.h  ModelLoader.h  ObjectReader.h  ObjectWriter.h  SFMLInterface.h
Engine/Media/Source/: AssimpInterface.cpp  ObjectReader.cpp  ObjectWriter.cpp  SFMLInterface.cpp
Engine/Networking/: Networking.h  Packet.h
Engine/Networking/Source/: Networking.cpp  Packet.cpp
Engine/Utility/: Console.h  Dictionary.h  Font.h  GUI.h  JSON.h  RocketInterface.h  StringDictionary.h  StringMethods.h  Text.h  Time.h  UnsignedIntDictionary.h  Window.h
Engine/Utility/Source/: Console.cpp  Font.cpp  GUI.cpp  JSON.cpp  RocketInterface.cpp  StringMethods.cpp  Text.cpp  Time.cpp  Window.cpp
GameServer/: CMakeLists.txt  main.cpp
Scripting/: CMakeLists.txt  Scripting.cpp  Scripting.h  test.py
Server/: CMakeLists.txt  Database.h  Networking.h  Packet.h  Server.h  client_test.py  main.cpp  main.py
Server/Source/: Database.cpp  Networking.cpp  Packet.cpp  Server.cpp
Server/modules/: data_retreival.py  database.py  generator.py  sector.py  server.py
Server/modules/dispatch_handlers/: communication.py  movement.py
Shaders/Basic/: billboarding.frag  billboarding.vert  font_rendering.frag  font_rendering.vert  font_rendering_ftgl.vert  lighting.frag  lighting.vert  planet_atmosphere.frag  planet_atmosphere.vert  sphere_cube_mapped_with_gradient_decal.frag  sphere_cube_mapped_with_gradient_decal.vert  sphere_cube_mapped_with_gradient_decal_with_lighting.frag  sphere_cube_mapped_with_gradient_decal_with_lighting.vert  textured.frag  textured.vert
Shaders/Deferred/: aa.frag  aa.vert  atmospheric_scattering.frag  atmospheric_scattering.vert  billboarding.frag  billboarding.vert  composition.frag  convolution.frag  depth_debug.frag  depth_debug.vert  dof.frag  font_rendering.frag  font_rendering.vert  gaussian_v.vert  gui_renderer.frag  lighting.frag  lighting.vert  luminance.frag  planet_atmosphere.frag  planet_atmosphere.vert  planet_atmosphere2.frag  planet_atmosphere2.vert  prepass.frag  prepass.vert  prepass_debug.frag  prepass_debug.vert  shadow_map.frag  shadow_map.vert  sphere_cube_mapped_gradient_decal_prepass.cont  sphere_cube_mapped_gradient_decal_prepass.eval  sphere_cube_mapped_gradient_decal_prepass.frag  sphere_cube_mapped_gradient_decal_prepass.vert  sphere_cube_mapped_gradient_decal_prepass_no_tessellation.frag  sphere_cube_mapped_gradient_decal_prepass_no_tessellation.vert  ssao.frag  translucent_lit_prepass.frag  translucent_lit_prepass.vert
Shaders/Multipass/: composition.frag  convolution.frag  debug.frag  gaussian_h.frag  gaussian_v.frag  lighting.frag  lighting.vert  sphere_cube_mapped_with_gradient_decal.frag  sphere_cube_mapped_with_gradient_decal.vert  sphere_cube_mapped_with_gradient_decal_with_lighting.frag  sphere_cube_mapped_with_gradient_decal_with_lighting.vert  textured.frag
TestClient/: CMakeLists.txt
(+29 files in other folders)
