cmake_minimum_required(VERSION 2.6)
IF (WIN32)
	IF (CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
		include_directories(../Dependencies/Windows/include/)
	ENDIF (CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
ELSE (WIN32)
	add_definitions(-shared)
	include_directories(../Dependencies/Linux/include/)
	include_directories(../Engine/)
ENDIF (WIN32)

add_library(pyegengine SHARED Scripting.h Scripting.cpp)
set_target_properties(pyegengine PROPERTIES PREFIX "")

IF (WIN32)
	IF (CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
		target_link_libraries(pyegengine egengine glew_static glut32 glu32 opengl32 sfml-system sfml-audio sfml-network sfml-window sfml-graphics assimp BulletDynamics BulletCollision LinearMath RocketCore RocketControls RocketDebugger Awesomium freetype ftgl_static mingw32 egengine glew_static glut32 glu32 opengl32 sfml-system sfml-audio sfml-network sfml-window sfml-graphics assimp BulletDynamics BulletCollision LinearMath RocketCore RocketControls RocketDebugger Awesomium freetype ftgl_static mingw32)
	ENDIF (CMAKE_GENERATOR STREQUAL "MinGW Makefiles")
	IF (CMAKE_GENERATOR STREQUAL "Visual Studio 10 Win64")
		target_link_libraries(pyegengine egengine glew32s glut32 glu32 opengl32 sfml-system sfml-audio sfml-network sfml-window sfml-graphics assimp BulletDynamics BulletCollision LinearMath Awesomium freetype246 ftgl_static)
	ENDIF (CMAKE_GENERATOR STREQUAL "Visual Studio 10 Win64")
ELSE (WIN32)
	target_link_libraries(pyegengine egengine sfml-graphics sfml-window sfml-system sfml-audio sfml-network assimp GLEW glut GLU BulletDynamics BulletCollision LinearMath Xrandr ftgl awesomium-1.6.5 python2.7 boost_python)
ENDIF (WIN32)
